Use Jekyll to do templates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <script src="chihacknight-intros-may-24-2016.js"></script>
+    <script src="chihacknight-intros-{{page.event_date}}.js"></script>
     <script src="colors.js"></script>
     <script src="helpers.js"></script>
     <script src="vendor.js"></script>
@@ -15,7 +15,7 @@
         How people introduced themselves
       </h1>
       at Chi Hack Night
-      <a href="https://chihacknight.org/events/2016/05/24/greater-good-studio.html"><strong>#206</strong></a>
+      <a href="{{page.event_link}}"><strong>#{{page.event_number}}</strong></a>
       <br/>
       <a href="index.html">#206</a> |
       <a href="205.html">#205</a> |
