--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <script src="chihacknight-intros-{{page.event_date}}.js"></script>
+    <script src="{{page.event_date}}.js"></script>
     <script src="colors.js"></script>
     <script src="helpers.js"></script>
     <script src="vendor.js"></script>
