ChiHackNight link via title, not event no.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,7 @@
       <h1 id="title">
         How people introduced themselves
       </h1>
-      at Chi Hack Night
-      <a href="{{page.event_link}}"><strong>#{{page.event_number}}</strong></a>
+      at Chi Hack Night #{{page.event_number}}, <a href="{{page.event_link}}"><strong>{{page.event_title}}</strong></a>
       <br/>
       <a href="index.html">#206</a> |
       <a href="205.html">#205</a> |
