May 31 hack night

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       </h1>
       at Chi Hack Night #{{page.event_number}}, <a href="{{page.event_link}}"><strong>{{page.event_title}}</strong></a>
       <br/>
-      <a href="index.html">#206</a> |
+      <a href="206.html">#206</a> |
       <a href="205.html">#205</a> |
       <a href="204.html">#204</a>
       <br/>
