--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,11 +14,12 @@
       <h1 id="title">
         How people introduced themselves
       </h1>
-      at Chi Hack Night #{{page.event_number}}, <a href="{{page.event_link}}"><strong>{{page.event_title}}</strong></a>
+      at Chi Hack Night #{{page.event_number}}, <a href="{{page.event_link}}"><strong>{{page.event_title}}</strong></a>.
       <br/>
-      <a href="206.html">#206</a> |
-      <a href="205.html">#205</a> |
-      <a href="204.html">#204</a>
+      Past:
+      <a href="206.html">#206</a>,
+      <a href="205.html">#205</a>,
+      <a href="204.html">#204</a>.
       <br/>
       <a href="https://github.com/alexsoble/chi-hack-night-intros/tree/gh-pages/notes">Data here,</a>
       <a href="https://github.com/alexsoble/chi-hack-night-intros/tree/gh-pages/">code here.</a>
